# QuadraticSolver

./: .gitignore  CMakeLists.txt  README.md  run_tests.bat
src/: main.cpp
src/BigDecimal/: BigDecimal.cpp  BigDecimal.hpp
src/BigNumber/: BigNumber.cpp  BigNumber.hpp
src/Interpreter/: Interpreter.cpp  Interpreter.hpp
src/QuadSolver/: QuadSolver.cpp  QuadSolver.hpp
src/Result/: Result.cpp  Result.hpp
src/Solver/: Solver.cpp  Solver.hpp
src/UnsignedArith/: UnsignedArith.cpp  UnsignedArith.hpp
tests/: test_solver.cpp
